[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri", 
  "apps/server",
  "core", 
  "crates/*", 
]

[workspace.package]
version = "0.0.10"
rust-version = "1.81.0"

[workspace.dependencies]
async-trait = "0.1.81"
async-stream = "0.3.5"
base64 = "0.22.1"
bcrypt = "0.15.1"
derive_builder = "0.20.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
futures-util = "0.3.30"
infer = "0.16.0"
itertools = "0.13.0"
keyring = { version = "3.4.0", features = ["apple-native", "windows-native", "sync-secret-service"] }
lettre = { version = "0.11.4", default-features = false, features = [
  "builder",
  "hostname",
  "smtp-transport",
  "tracing",
  "tokio1-rustls-tls",
] }
md5 = "0.7.0"
once_cell = "1.19.0"
prefixed-api-key = { version = "0.3.0", features = ["sha2"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust.git", rev = "4f9ef9d38ca732162accff72b2eb684d2f120bab", features = [
  "sqlite-create-many",
  "migrations",
  "sqlite",
  "mocking"
], default-features = false }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust.git", rev = "4f9ef9d38ca732162accff72b2eb684d2f120bab", features = [
  "sqlite-create-many",
  "migrations",
  "sqlite",
  "mocking"
], default-features = false }
rand = "0.8.5"
reqwest = { version = "0.12.7", default-features = false, features = [ "json", "rustls-tls" ] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_with = "3.8.1"
simple_crypt = "0.2.3"
specta = { version = "1.0.5", features = ["chrono", "url"] }
tempfile = "3.12.0"
thiserror = "1.0.63"
tokio = { version = "1.41.1", features = [
  # Provides sender/reciever channels
  "sync", 
  # Tells the Tokio runtime to use the multi-thread scheduler.
  "rt-multi-thread",
  # Allows handling shutdown signals (e.g., ctrl+c)
  "signal",
] }
toml = "0.8.19"
tracing = "0.1.40"
urlencoding = "2.1.3"
# Required for macro crates
proc-macro2 = "1.0.87"
quote = "1.0.37"
syn = "2.0.79"
# Note: We need to keep this downgraded for the time being. See https://github.com/stumpapp/stump/issues/427#issuecomment-2332857700
zip = { version = "=1.1.3", features = ["deflate"], default-features = false }
