[package]
name = "stump_core"
version = { workspace = true }
edition = "2021"

[dependencies]
alphanumeric-sort = "1.5.3"
async-channel = "2.1.0"
async-trait = { workspace = true }
cuid = "1.3.2"
data-encoding = "2.5.0"
dirs = "5.0.1"
email = { path = "../crates/email" }
epub = { git = "https://github.com/stumpapp/epub-rs", rev = "38e091abe96875952556ab7dec195022d0230e14" }
futures = { workspace = true }
globset = "0.4.14"
image = {version = "0.25.2", features = ["avif-native"]}
infer = "0.16.0"
itertools = "0.12.1"
prisma-client-rust = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde-xml-rs = "0.6.0" # Support for XML serialization/deserialization
serde_json = { workspace = true }
simple_crypt = { workspace = true }
specta = { workspace = true }
tokio = { workspace = true }
toml = "0.8.8"
trash = "3.1.2"
# pdf = "0.8.1"
pdf = { git = "https://github.com/pdf-rs/pdf", rev = "3bc9e636d31b1846e51b58c7429914e640866f53" } # TODO: revert back to crates.io once fix(es) release
pdfium-render = "0.8.16"
rayon = "1.8.0"
regex = "1.10.4"
ring = "0.17.8"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
unrar = { version = "0.5.3" }
urlencoding = { workspace = true }
utoipa = { version = "3.5.0" }
uuid = "1.8.0"
walkdir = "2.4.0"
webp = "0.3.0"
xml-rs = "0.8.20" # XML reader/writer
zip = "2.1.6"

[dev-dependencies]
temp-env = "0.3.6"
tempfile = { workspace = true }
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }

[build-dependencies]
chrono = "0.4.37"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.152"

[[bench]]
name    = "bench_main"
harness = false
