[package]
name = "stump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
rocket =  { version = "0.5.0-rc.1", features =  ["json" ] }
# sea-orm = { version = "0.6.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls" ] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.0"
env_logger = "0.8.4"
anyhow = "1.0.52"
dirs = "4.0.0"
derive_more = "0.99.17"
unrar = { git = "https://github.com/aaronleopold/unrar.rs" }
zip = "0.5.13"
xml-rs = "0.8.4"
serde-xml-rs = "0.5.1"
chrono = "0.4.19"
sha256 = "1.0.3"
thiserror = "1.0.30"
walkdir = "2.3.2"
urlencoding = "2.1.0"
base64 = "0.13.0"
rocket-include-static-resources = "0.10.0"
epub = "1.2.3"
rocket-session-store = "0.1.0"
bcrypt = "0.10.1"
rocket_cors = "0.6.0-alpha1"
# FIXME: introduced MAJOR compilation issues
#pdf = { git = "https://github.com/pdf-rs/pdf" }
#pdf_render = { git = "https://github.com/pdf-rs/pdf_render" }
#pathfinder_rasterize = { git = "https://github.com/s3bk/pathfinder_rasterizer" }
#pathfinder_geometry = { git = "https://github.com/servo/pathfinder" }
