[package]
name = "stump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
sea-orm = { version = "0.4.1", features = [ "sqlx-sqlite", "runtime-async-std-native-tls" ] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.0"
env_logger = "0.8.4"
anyhow = "1.0.52"
dirs = "4.0.0"
derive_more = "0.99.17"
