[package]
name = "stump_server"
version = { workspace = true }
edition = "2021"
default-run = "stump_server"

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
axum = { version = "0.6.20", features = [
  "ws", 
  "headers",
  "multipart",
] }
axum-macros = "0.4.0"
axum-extra = { version = "0.5.0", features = [
  "spa",
  "query"
] }
base64 = "0.22.0"
bcrypt = { workspace = true }
cli = { path = "../../crates/cli" }
futures-util = { workspace = true }
hyper = "0.14.27"
jsonwebtoken = "9.3.0"
linemux = { git = "https://github.com/jmagnuson/linemux.git", rev = "acaafc602afac5d7a9cd3e087dafc937cac1e364" }
local-ip-address = "0.6.1"
prisma-client-rust = { workspace = true }
rand = "0.8.5"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { version = "0.12.0", features = ["axum"] }
serde-untagged = "0.1.2"
specta = { workspace = true }
stump_core = { path = "../../core" }
tower-http = { version = "0.4.4", features = [
  "fs",
  "cors",
  "set-header",
  "trace"
] }
thiserror = { workspace = true }
time = "0.3.36"
tokio = { workspace = true }
tokio-util = "0.7.10"
tower = "0.4.13"
tower-sessions = "0.2.1"
tracing = { workspace = true }
urlencoding = { workspace = true }
utoipa = { version = "3.5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }

[dev-dependencies]
axum-test = "13.4.1" # TODO: Update once axum is updated


[build-dependencies]
chrono = "0.4.37"

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.61", features = ["vendored"] }

[target.armv7-unknown-linux-musleabihf.dependencies]
openssl = { version = "0.10.61", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.61", features = ["vendored"] }

