[package]
name = "stump_server"
version = { workspace = true }
edition = "2021"
default-run = "stump_server"

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
axum = { version = "0.7.5", features = [
  "ws", 
  "multipart",
] }
axum-macros = "0.4.1"
axum_typed_multipart = "0.13.1"
axum-extra = { version = "0.9.3", features = [
  "typed-header",
  "query"
] }
base64 = { workspace = true }
bcrypt = { workspace = true }
cli = { path = "../../crates/cli" }
chrono = { workspace = true }
futures-util = { workspace = true }
hyper = "0.14.27"
infer = { workspace = true }
jsonwebtoken = "9.3.0"
linemux = { git = "https://github.com/jmagnuson/linemux.git", rev = "acaafc602afac5d7a9cd3e087dafc937cac1e364" }
local-ip-address = "0.6.2"
once_cell = { workspace = true }
prefixed-api-key = { workspace = true}
prisma-client-rust = { workspace = true }
rand = "0.8.5"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { version = "0.13.0", features = ["axum"] }
serde-untagged = "0.1.2"
serde_with = { workspace = true }
specta = { workspace = true }
stump_core = { path = "../../core" }
tempfile = "3.13.0"
tower-http = { version = "0.5.2", features = [
  "fs",
  "cors",
  "set-header",
  "trace"
] }
thiserror = { workspace = true }
time = "0.3.36"
tokio = { workspace = true }
tokio-util = "0.7.10"
tower = "0.4.13"
tower-sessions = "0.12.2"
tracing = { workspace = true }
urlencoding = { workspace = true }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
zip = { workspace = true }

[dev-dependencies]
axum-test = "15.3.1"
tokio = { workspace = true, features = ["full", "test-util"] }

[build-dependencies]
chrono = { workspace = true }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }

[target.armv7-unknown-linux-musleabihf.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = ["Win32_Storage_FileSystem"] }
