[package]
name = "integration-tests"
version = { workspace = true }
autotests = false
autobenches = false
edition = "2021"

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true

[dev-dependencies]
serde = { workspace = true }
prisma-client-rust = { workspace = true }
tokio = { workspace = true }
stump_core = { path = ".." }
tempfile = "3.3.0"