[package]
name = "cli"
version = "0.0.8"
edition = "2021"

[[bin]]
name = "cli-bin"
path = "bin/main.rs"

[dependencies]
stump_core = { path = "../../core" }
tokio = { workspace = true }
bcrypt = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4.5.16", features = ["derive"] }

prisma-client-rust = { workspace = true }

dialoguer = "0.11.0"
indicatif = "0.17.8"
prettytable-rs = "0.10.0"
