[package]
name = "cli"
version = "0.0.8"
edition = "2021"

[[bin]]
name = "cli-bin"
path = "bin/main.rs"

[dependencies]
stump_core = { path = "../../core" }
models = { path = "../models" }

sea-orm = { workspace = true }
tokio = { workspace = true }
bcrypt = { workspace = true }
thiserror = { workspace = true }
clap.workspace = true

dialoguer = "0.11.0"
indicatif = "0.17.8"
prettytable-rs = "0.10.0"
