[package]
name = "email"
edition = "2021"
version.workspace = true
rust-version.workspace = true


[dependencies]
handlebars = "5.1.0"
lettre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
utoipa = { version = "3.5.0" }
