[package]
name = "graphql"
edition = "2021"
version.workspace = true

[dependencies]
alphanumeric-sort.workspace = true
async-graphql.workspace = true
chrono.workspace = true
epub.workspace = true
infer.workspace = true
itertools.workspace = true
models = { path = "../../database/models" }
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
strum.workspace = true
stump_core = { path = "../../core" }
tokio.workspace = true
tracing.workspace = true
zip.workspace = true

[dev-dependencies]
maplit.workspace = true
