[package]
name = "graphql"
edition = "2021"
version.workspace = true

[[bin]]
name = "graphql-gen"
path = "bin/main.rs"

[dependencies]
alphanumeric-sort.workspace = true
async-graphql.workspace = true
async-stream.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
epub.workspace = true
filter-gen = { path = "../filter-gen" }
futures-util.workspace = true
infer.workspace = true
itertools.workspace = true
linemux = { git = "https://github.com/jmagnuson/linemux.git", rev = "acaafc602afac5d7a9cd3e087dafc937cac1e364" }
models = { path = "../../database/models" }
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
strum.workspace = true
stump_core = { path = "../../core" }
tokio.workspace = true
tracing.workspace = true
zip.workspace = true
bcrypt.workspace = true

[dev-dependencies]
maplit.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
async-graphql-axum.workspace = true
