[package]
name = "integrations"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
reqwest = { version = "0.11.22", features = [ "json" ] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
dotenv = "0.15.0"