[package]
name = "smart-filter-gen"
version = "0.0.6"
description = "A procedural macro for generating smart filters."
edition = "2021"

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
toml = { workspace = true }
