[package]
name = "stump-config-gen"
version = "0.0.1"
description = "A procedural macro for generating the StumpConfig struct."
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["extra-traits", "parsing"] }

[dev-dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
toml = { workspace = true }
temp-env = "0.3.6"
