[package]
name = "stump-config-gen"
version = "0.0.8"
description = "A procedural macro for generating the StumpConfig struct."
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
toml = { workspace = true }
temp-env = "0.3.6"
