[package]
name = "models"
edition = "2021"

[dependencies]
async-graphql.workspace = true
globset.workspace = true
itertools.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
