[package]
name = "models"
edition = "2021"

[dependencies]
async-graphql.workspace = true
chrono.workspace = true
globset.workspace = true
itertools.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

filter-gen = { path = "../../crates/filter-gen" }

[dev-dependencies]
tokio-test.workspace = true
pretty_assertions.workspace = true
