[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.19"
rocket = { version = "0.5.0-rc.1", features = [
  "json",
] }

[dependencies.sea-orm]
version = "^0.6.0"
features = [
  "macros",
  "runtime-tokio-native-tls",
  # "sqlx-postgres",
  # "sqlx-mysql",
  "sqlx-sqlite"
]
default-features = false