[package]
name = "stump_desktop"
version = "0.0.7"
description = ""
authors = ["Aaron Leopold <aaronleopold1221@gmail.com>"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
stump_server = { path = "../../server", optional = true }
discord-rich-presence = "0.2.3"
keyring = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
specta = { workspace = true }
thiserror = { workspace = true }
tauri = { version = "2.0.4", features = [ "devtools"] }
tracing = { workspace = true }
tauri-plugin-store = "2.0.1"
# See https://github.com/dbus2/zbus/issues/667
zbus_names = "=2.6.1"
tauri-plugin-os = "2.0.0"
tauri-plugin-shell = "2"
# TODO(?): https://github.com/Smithay/wayland-rs/pull/722

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
# This feature will bundle the Stump server with the desktop app, allowing the user to use the desktop app
# as their dedicated server instance.
bundled-server = [ "dep:stump_server" ] 
