[package]
name = "filter-gen"
version = "0.0.0"
description = "A procedural macro for generating SeaORM filters"
edition = "2021"

[lib]
proc-macro = true
doctest = false

[dependencies]
heck.workspace = true
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
toml = { workspace = true }
